--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "project-react-whiskey",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,17 @@
   "bugs": {
     "url": "https://github.com/jimdoan4/Project-React-Whiskey/issues"
   },
-  "homepage": "https://github.com/jimdoan4/Project-React-Whiskey#readme"
+  "homepage": "https://github.com/jimdoan4/Project-React-Whiskey#readme",
+  "dependencies": {
+    "concurrently": "^5.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7",
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
