--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
