--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "dev": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
+    "postinstall": "cd client && npm i && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jimdoan4/Project-React-Whiskey.git"
+  },
+  "engines": {
+    "node": "10.15.0"
   },
   "author": "",
   "license": "ISC",
